--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,6 @@
 name = "advent-of-code"
 version = "0.1.0"
 authors = ["Martin Thoresen <martinhath@gmail.com>"]
+
+[dependencies]
+rust-crypto = "0.2.34"
