--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Martin Hafskjold Thoresen <martinhath@gmail.com>"]
 
 [dependencies]
+regex = "*"
+rust-crypto = "*"
+lazy_static = "*"
+
