Restructure to have 2016 and 2017

--- a/2016/Cargo.toml
+++ b/2016/Cargo.toml
@@ -7,4 +7,6 @@ authors = ["Martin Hafskjold Thoresen <martinhath@gmail.com>"]
 regex = "*"
 rust-crypto = "*"
 lazy_static = "*"
-
+rayon = "*"
+rand = "*"
+permutohedron = "*"
