--- a/2017/Cargo.toml
+++ b/2017/Cargo.toml
@@ -4,9 +4,4 @@ version = "0.1.0"
 authors = ["Martin Hafskjold Thoresen <martinhath@gmail.com>"]
 
 [dependencies]
-regex = "*"
-rust-crypto = "*"
-lazy_static = "*"
-rayon = "*"
-rand = "*"
-permutohedron = "*"
+nom = "*"
